artist-title letter-spacing fixed

--- a/blocks/place/__artist-title/place__artist-title.css
+++ b/blocks/place/__artist-title/place__artist-title.css
@@ -8,5 +8,6 @@
   font-style: normal;
   font-weight: 400;
   text-transform: uppercase;
-  line-height: 14.52px;
+  line-height: 1.25;
+  letter-spacing: 0.12em;
 }
